# book-physical-ai-robotics

./: .dockerignore  .env.example  .gitignore  .railwayignore  404.html  CLAUDE.md  DEPLOYMENT_COMPLETE.md  DEPLOY_NOW.sh  DEPLOY_RAILWAY_CLI.sh  DEPLOY_RAILWAY_DASHBOARD.md  DIAGNOSE_RAILWAY.md  Dockerfile  FEATURES_IMPLEMENTED.md  FORMATTING_UPDATE.md  FRONTEND_UPDATED.md  INGEST_BOOKS.md  OPENAI_MIGRATION_COMPLETE.md  Procfile  RAILWAY_CLI_COMMAND.sh  RAILWAY_DEPLOY.md  RAILWAY_DEPLOYMENT.md  RAILWAY_ENV_VARS.txt  TEST_RESULTS.md  VERIFY_DEPLOYMENT.sh  chat-widget.js  check_chatbot.py  docker-compose.yml  docusaurus.config.js  index.html  ingest_github_book.sh  init_books_schema.py  init_db.py  nixpacks.toml  package-lock.json  package.json  physical-ai-robotics-book.md  pyproject.toml  pytest.ini  railway.json  railway.toml  (+7 more)
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
assessments/: index.html
assets/css/: styles.98d40c98.css
assets/js/: 0058b4c6.4c56ceb2.js  01a85c17.a1ac0c8e.js  0e384e19.a313015e.js  0e384e19.d57a9a58.js  14eb3368.7089b0d8.js  17896441.5951a6f0.js  17896441.5dd43854.js  18c41134.52e13d70.js  1db64337.0a9ce6d9.js  1db64337.9440ef87.js  1dea6ca3.087c1c2d.js  1df93b7f.d376409d.js  1e4232ab.c3ad23fd.js  1f391b9e.cfc36224.js  2237.6060eaf6.js  237.22edf720.js  2ab8ccb5.fcf7bede.js  2ab8ccb5.ff81c421.js  3217192f.a32d8556.js  33fc5bb8.ba4ee631.js  36994c47.2bbc7bad.js  393be207.61a1389f.js  (+60 more)
blog/: index.html
docs/: assessments.md  hardware.md  intro.md  overview.md  weekly-breakdown.md
hardware/: index.html
intro/: index.html
markdown-page/: index.html
overview/: index.html
static/: chat-widget.js
tests/: test_rag_integration.py
weekly-breakdown/: index.html
(+85 files in other folders)
